# SpaceOddity_GUI

./: .gitignore  develop.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/API/src/: spaceoddity_gui.md  spaceoddity_gui_base.md
docs/API/src/gui/python/: spaceoddity_gui_app.md  spaceoddity_gui_win.md
i18n/po/: LINGUAS
i18n/po/en/: spaceoddity_gui.po
install/: install.json  install.py  install_base.py  uninstall.py
misc/: tree.html  tree.txt
pyplate/: project.json
pyplate/private/: private.json
src/: spaceoddity_gui.py  spaceoddity_gui_base.py
src/gui/desktop/: SpaceOddity_GUI.desktop
src/gui/python/: keys.py  load.py  sanitize.py  save.py  spaceoddity_gui_app.py  spaceoddity_gui_win.py
src/gui/ui/: dialogs.ui  spaceoddity_gui_win.ui
tests/: font2.py
todo/: todo.txt
